[gd_scene load_steps=8 format=3 uid="uid://bhnrrw700scer"]

[ext_resource type="Script" path="res://scripts/player.gd" id="1_ellhj"]
[ext_resource type="PackedScene" uid="uid://pbmyh1qru7p" path="res://characters/happy_boo/happy_boo.tscn" id="1_uap8n"]
[ext_resource type="PackedScene" uid="uid://dise3vi6sobpw" path="res://scenes/gun.tscn" id="3_i0yuo"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_olyt3"]
radius = 25.0
height = 76.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_c3ts8"]
radius = 29.0
height = 82.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_mee33"]
bg_color = Color(0.152941, 0.168627, 0.188235, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_fwykh"]
bg_color = Color(0.388235, 0.8, 0.372549, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[node name="Player" type="CharacterBody2D"]
script = ExtResource("1_ellhj")

[node name="HappyBoo" parent="." instance=ExtResource("1_uap8n")]
unique_name_in_owner = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -17)
shape = SubResource("CapsuleShape2D_olyt3")
debug_color = Color(0.245448, 0.626057, 0.329136, 0.42)

[node name="Gun" parent="." instance=ExtResource("3_i0yuo")]
position = Vector2(0, -47)

[node name="HurtBox" type="Area2D" parent="."]
unique_name_in_owner = true
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtBox"]
position = Vector2(0, -16)
shape = SubResource("CapsuleShape2D_c3ts8")
debug_color = Color(0.813831, 0.381561, 0.396289, 0.42)

[node name="ProgressBar" type="ProgressBar" parent="."]
unique_name_in_owner = true
offset_left = -91.0
offset_top = -120.0
offset_right = 90.0
offset_bottom = -101.0
theme_override_styles/background = SubResource("StyleBoxFlat_mee33")
theme_override_styles/fill = SubResource("StyleBoxFlat_fwykh")
step = 1.0
value = 100.0
show_percentage = false

[node name="MonsterScore" type="Label" parent="."]
unique_name_in_owner = true
offset_left = -127.0
offset_top = -152.0
offset_right = 127.0
offset_bottom = -128.0
scale = Vector2(1, 1.03813)
size_flags_horizontal = 4
theme_override_colors/font_color = Color(0, 0, 0, 1)
horizontal_alignment = 1
